--- a/index.html
+++ b/index.html
@@ -255,6 +255,10 @@ footer {
 
 <body><header>
 
+a href="english.html" style="position:absolute; top:20px; right:20px; background:#2e7d32; color:white; padding:8px 14px; border-radius:6px; text-decoration:none;">
+🇺🇸 English
+</a>
+  
 <h1 
 data-es="Evergreen Tours"
 data-en="Evergreen Tours">
