--- a/english.html
+++ b/english.html
@@ -332,14 +332,14 @@ biodiversity<br>
 
 <div class="slide active">
 <img src="monorama.jpg">
-<div class="descripcion">Mono Carablanca<br>
+<div class="descripcion">Colombian white-faced capuchin<br>
 (Cebus imitator)
 </div>
 </div>
 
 <div class="slide">
 <img src="murcielago.jpg">
-<div class="descripcion">Murcielagos tenderos<br>
+<div class="descripcion">Bats<br>
 (Uroderma billobatum)
 
 </div></div>
@@ -355,20 +355,20 @@ biodiversity<br>
 
 <div class="slide">
 <img src="luisvenegas.jpg">
-<div class="descripcion">Final del Tour
+<div class="descripcion">End of the tour
 <br>(Mapa de Manuel Antonio)
 </div></div>
 
 
 <div class="slide">
 <img src="perezosoacostado.jpg">
-<div class="descripcion">Perezoso de 2 dedos
+<div class="descripcion">Two-toed sloth
 <br>
 (Choloepus hoffmanni)</div></div>
 
 <div class="slide">
 <img src="averara.jpg">
-<div class="descripcion">Cuyeo, Tapacaminos<br>
+<div class="descripcion">White-collared Swift<br>
 (Nyctidromus albicollis)</div></div>
 
 <div class="slide">
@@ -378,40 +378,40 @@ biodiversity<br>
 
 <div class="slide">
 <img src="tucan.jpg">
-<div class="descripcion">Tucán Kioro<br>
+<div class="descripcion">Kiora Toucan<br>
 (Ramphastos ambiguos)
 </div></div>
 
 <div class="slide">
 <img src="osoperezosoraro.jpg">
-<div class="descripcion">Perezoso de 3 Dedos<br>
+<div class="descripcion">Three-toed sloth<br>
 (Bradypus variegatus)</div></div>
 
 
 <div class="slide">
 <img src="luistelescopio.jpg">
-<div class="descripcion">Equipo óptico 
+<div class="descripcion">Optical equipment 
 <br>(Guía Luis Venegas</div></div>
 
 <div class="slide">
 <img src="mariposa.jpg">
-<div class="descripcion">Mariposa<br>
+<div class="descripcion">Butterflies<br>
 (Eurybia sp.)</div></div>
 
 
 <div class="slide">
 <img src="iguana.jpg">
-<div class="descripcion">Lagartija Jesucristo<br>
+<div class="descripcion">Jesus Christ Lizard<br>
 (Basiliscus basiliscus)
 </div></div>
 
 <div class="slide">
 <img src="perezososrama.jpg">
-<div class="descripcion">Perezoso de 3 Dedos<br>
+<div class="descripcion">Three-toed sloth<br>
 (Bradypus variegatus)</div></div>
 
 <div class="slide">
-<img src="aveacostada.jpg"><div class="descripcion">Cuyeo, Tapacaminos<br>
+<img src="aveacostada.jpg"><div class="descripcion">White-collared Swift<br>
 (Nyctidromus albicollis)
 </div></div>
 
