--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@ body {
   line-height: 1.6;
 }
 
+h1, .title {
+    margin-top: 20px; /* Ajusta el valor según necesites */
+}
+  
 
 .review {
   border-bottom: 1px solid #eee;
