--- a/english.html
+++ b/english.html
@@ -347,7 +347,7 @@ biodiversity<br>
 
 <div class="slide">
 <img src="osoperezoso.jpg">
-<div class="descripcion">Perezoso de 2 dedos<br>
+<div class="descripcion">Two-toed sloth<br>
 (Choloepus hoffmanni)
 
 </div></div>
