--- a/english.html
+++ b/english.html
@@ -473,7 +473,7 @@ biodiversity<br>
 
 <h2>Book Your Tour</h2>
 <div class="card">
-  <form action="https://formsubmit.co/palomitasopopcorn@gmail.com" method="POST">
+  <form action="https://formsubmit.co/walkingtourma@gmail.com" method="POST">
 
 <input type="hidden" name="_captcha" value="true">
 <input type="hidden" name="_template" value="table">
