--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ Walking tour Manuel Antonio
 
 <h2>Reserva tu tour</h2>
 <div class="card">
-  <form action="https://formsubmit.co/palomitasopopcorn@gmail.com" method="POST">
+  <form action="https://formsubmit.co/walkingtourma@gmail.com" method="POST">
 
 <input type="hidden" name="_captcha" value="true">
 <input type="hidden" name="_template" value="table">
