--- a/english.html
+++ b/english.html
@@ -332,7 +332,7 @@ biodiversity<br>
 
 <div class="slide active">
 <img src="monorama.jpg">
-<div class="descripcion">Colombian white-faced capuchin<br>
+<div class="descripcion">white-faced capuchin<br>
 (Cebus imitator)
 </div>
 </div>
