--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@ h1, .title {
 .review {
   border-bottom: 1px solid #eee;
   padding: 12px 0;
-}header {
+}
+  header {
+    position: relative;
   background:
     linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),
     url("osoperezoso.jpg");
@@ -37,6 +39,8 @@ h1, .title {
   color: #81c784;
 }
 
+
+  
 .google-btn {
   display: inline-block;
   padding: 14px 26px;
@@ -62,6 +66,24 @@ h1, .title {
 header h1 { margin: 0; font-size: 34px; }
 header p { margin-top: 10px; font-size: 18px; color: #81c784; }
 
+header h1 {
+  margin-top: 40px;
+  text-shadow:
+    -3px -3px 0 black,
+     3px -3px 0 black,
+    -3px  3px 0 black,
+     3px  3px 0 black;
+}
+
+header .subtitulo {
+  font-size: 20px;
+  text-shadow:
+    -2px -2px 0 black,
+     2px -2px 0 black,
+    -2px  2px 0 black,
+     2px  2px 0 black;
+}
+  
 main { max-width: 900px; margin: auto; padding: 40px 20px; }
 
 h2 { color: #1b5e20; margin-top: 40px; }
@@ -86,6 +108,8 @@ h2 { color: #1b5e20; margin-top: 40px; }
 .dot{
   height:10px;
   width:10px;
+  
+  
   margin:5px;
   background:#c8e6c9;
   border-radius:50%;
@@ -269,11 +293,7 @@ data-en="Evergreen Tours">
 Evergreen Tours
 </h1>
 
-</p>
-Costa Rica con Venegas
-</p>
-<div style="margin-top:15px;"></div>
-
+<p class="subtitulo">Costa Rica con Venegas</p>
 
 </header>
 
