--- a/index.html
+++ b/index.html
@@ -63,7 +63,11 @@ h1, .title {
   transform: scale(0.96);
 }
 
-header h1 { margin: 0; font-size: 34px; }
+header h1 { 
+  margin: 0; 
+  font-size: 34px; 
+  color: black;
+}
 header p { margin-top: 10px; font-size: 18px; color: #81c784; }
 
 header h1 {
@@ -83,7 +87,9 @@ header .subtitulo {
     -2px  2px 0 black,
      2px  2px 0 black;
 }
-  
+header .subtitulo {
+  color: black;
+}  
 main { max-width: 900px; margin: auto; padding: 40px 20px; }
 
 h2 { color: #1b5e20; margin-top: 40px; }
