--- a/index.html
+++ b/index.html
@@ -68,25 +68,8 @@ header h1 {
   font-size: 34px; 
   color: black;
 }
-header p { margin-top: 10px; font-size: 18px; color: #81c784; }
-
-header h1 {
-  margin-top: 40px;
-  text-shadow:
-    -3px -3px 0 black,
-     3px -3px 0 black,
-    -3px  3px 0 black,
-     3px  3px 0 black;
-}
-
-header .subtitulo {
-  font-size: 20px;
-  text-shadow:
-    -2px -2px 0 black,
-     2px -2px 0 black,
-    -2px  2px 0 black,
-     2px  2px 0 black;
-}
+header p { margin-top: 10px; font-size: 18px; color: #81c784; 
+          
 header .subtitulo {
   color: black;
 }  
