--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ header h1 {
   font-size: 34px; 
   color: black;
 }
-header p { margin-top: 10px; font-size: 18px; color: #81c784; 
+header p { margin-top: 10px; font-size: 18px; color: #81c784; }
           
 header .subtitulo {
   color: black;
