--- a/index.html
+++ b/index.html
@@ -73,6 +73,11 @@ header p { margin-top: 10px; font-size: 18px; color: #81c784; }
 header .subtitulo {
   color: black;
 }  
+  .lang-btn {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+  }
 main { max-width: 900px; margin: auto; padding: 40px 20px; }
 
 h2 { color: #1b5e20; margin-top: 40px; }
