--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ header h1 {
 header p { margin-top: 10px; font-size: 18px; color: #81c784; }
           
 header .subtitulo {
-  color: black;
+  color: white;
 }  
   .lang-btn {
   position: absolute;
