--- a/index.html
+++ b/index.html
@@ -72,7 +72,10 @@ header p { margin-top: 10px; font-size: 18px; color: #81c784; }
           
 header .subtitulo {
   color: white;
-}  
+  font-size: 20px;
+  font-weight: 500;
+  text-shadow: 0px 3px 8px rgba(0,0,0,0.7);
+}
   .lang-btn {
   position: absolute;
   top: 20px;
