--- a/index.html
+++ b/index.html
@@ -280,7 +280,8 @@ footer {
 
 <body><header>
 
-<a href="english.html" style="position:absolute; top:20px; right:20px; background:#2e7d32; color:white; padding:8px 14px; border-radius:6px; text-decoration:none;">
+<a href="english.html" 
+   style="position:absolute; top:15px; right:15px; background:#2e7d32; color:white; padding:8px 14px; border-radius:6px; text-decoration:none;">
   🇺🇸 English
 </a>
   
