--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <meta charset="UTF-8">
 <title>Evergreen Tours | Costa Rica</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
+  
 <style>
 body {
   margin: 0;
@@ -65,8 +66,11 @@ h1, .title {
 
 header h1 { 
   margin: 0; 
-  font-size: 34px; 
-  color: black;
+  font-size: 36px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  color: white;
+  text-shadow: 0px 4px 12px rgba(0,0,0,0.7);
 }
 header p { margin-top: 10px; font-size: 18px; color: #81c784; }
           
