--- a/index.html
+++ b/index.html
@@ -75,11 +75,15 @@ header h1 {
 header p { margin-top: 10px; font-size: 18px; color: #81c784; }
           
 header .subtitulo {
+  position: absolute;
+  bottom: 20px;   /* Esto lo baja */
+  left: 50%;
+  transform: translateX(-50%);
   color: white;
+  font-family: 'Poppins', sans-serif;
   font-size: 20px;
-  font-weight: 500;
-  text-shadow: 0px 3px 8px rgba(0,0,0,0.7);
 }
+
   .lang-btn {
   position: absolute;
   top: 20px;
