--- a/english.html
+++ b/english.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>Evergreen Tours | Costa Rica</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600;700&display=swap" rel="stylesheet">
 <style>
 body {
   margin: 0;
@@ -54,10 +54,28 @@ body {
 .google-btn:active {
   transform: scale(0.96);
 }
-
-header h1 { margin: 0; font-size: 34px; }
+header {
+  position: relative;
+}
+header h1 { 
+  margin: 0;
+  font-size: 36px;
+  font-family: 'Poppins', sans-serif;
+  font-weight: 700;
+  color: white;
+  text-shadow: 0px 4px 12px rgba(0,0,0,0.7);
+}
 header p { margin-top: 10px; font-size: 18px; color: #81c784; }
 
+  header .subtitulo {
+  position: absolute;
+  bottom: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: white;
+  font-family: 'Poppins', sans-serif;
+  font-size: 20px;
+}
 main { max-width: 900px; margin: auto; padding: 40px 20px; }
 
 h2 { color: #1b5e20; margin-top: 40px; }
