--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@ header h1 {
 header p { margin-top: 10px; font-size: 18px; color: #81c784; }
           
 header .subtitulo {
-  position: absolute;
-  bottom: 20px;   /* Esto lo baja */
-  left: 50%;
-  transform: translateX(-50%);
+  position: relative;   /* ← quitamos absolute */
+  bottom: auto;
+  left: auto;
+  transform: none;
   color: white;
   font-family: 'Poppins', sans-serif;
   font-size: 20px;
-}
+  margin-bottom: 10px;
+  }
 
   .lang-btn {
   position: absolute;
