--- a/english.html
+++ b/english.html
@@ -281,9 +281,7 @@ data-en="Evergreen Tours">
 Evergreen Tours
 </h1>
 
-</p>
-Costa Rica with Venegas
-</p>
+<p class="subtitulo">Costa Rica with Venegas</p>
 <div style="margin-top:15px;"></div>
 
 
