--- a/index.html
+++ b/index.html
@@ -64,26 +64,41 @@ h1, .title {
   transform: scale(0.96);
 }
 
+/* HEADER */
+header {
+  position: relative;
+  height: 180px; /* ajusta según tu imagen */
+  padding: 20px;
+  text-align: center;
+  background:
+    linear-gradient(rgba(0,0,0,0.35), rgba(0,0,0,0.35)),
+    url("osoperezoso.jpg");
+  background-size: cover;
+  background-position: center;
+  border-bottom: 4px solid #a5d6a7;
+}
+
+/* TÍTULO */
 header h1 { 
-  margin: 0; 
+  margin: 0;
   font-size: 36px;
   font-family: 'Poppins', sans-serif;
   font-weight: 700;
   color: white;
   text-shadow: 0px 4px 12px rgba(0,0,0,0.7);
 }
-header p { margin-top: 10px; font-size: 18px; color: #81c784; }
-          
+
+/* SUBTÍTULO */
 header .subtitulo {
-  position: absolute;
-  bottom: 10px;       /* lo pega cerca del borde inferior */
-  left: 50%;           /* lo centra horizontalmente */
+  position: absolute;       /* flota dentro del header */
+  bottom: 10px;             /* distancia desde el borde inferior */
+  left: 50%;                /* centrado horizontal */
   transform: translateX(-50%);
   font-family: 'Poppins', sans-serif;
   font-weight: 600;
   font-size: 20px;
-  color: white;
-  margin: 0;
+  color: white;             /* blanco */
+  margin: 0;                /* elimina márgenes */
 }
 
   .lang-btn {
