--- a/english.html
+++ b/english.html
@@ -340,7 +340,7 @@ biodiversity<br>
 
 <h2>Tour Price</h2>
 <div class="card">
-<p>Enjoy a unique experience in one of the most beautiful national parks in Costa Rica.</p>
+<p>Enjoy an unique experience in one of the most beautiful national parks in Costa Rica.</p>
 <div class="precio">$30 USD per person</div>
 </div>
 
@@ -378,8 +378,8 @@ biodiversity<br>
 
 <div class="slide">
 <img src="osoperezoso.jpg">
-<div class="descripcion">Two-toed sloth<br>
-(Choloepus hoffmanni)
+<div class="descripcion">Three-toed sloth<br>
+(Bradypus variegatus)
 
 </div></div>
 
@@ -399,7 +399,7 @@ biodiversity<br>
 
 <div class="slide">
 <img src="averara.jpg">
-<div class="descripcion">White-collared Swift<br>
+<div class="descripcion">Common pauraque.<br>
 (Nyctidromus albicollis)</div></div>
 
 <div class="slide">
@@ -409,7 +409,7 @@ biodiversity<br>
 
 <div class="slide">
 <img src="tucan.jpg">
-<div class="descripcion">Kiora Toucan<br>
+<div class="descripcion">Yellow throaded Toucan<br>
 (Ramphastos ambiguos)
 </div></div>
 
@@ -422,7 +422,7 @@ biodiversity<br>
 <div class="slide">
 <img src="luistelescopio.jpg">
 <div class="descripcion">Optical equipment 
-<br>(Guía Luis Venegas</div></div>
+<br>(Guía Luis Venegas)</div></div>
 
 <div class="slide">
 <img src="mariposa.jpg">
