--- a/index.html
+++ b/index.html
@@ -86,6 +86,8 @@ header h1 {
   font-weight: 700;
   color: white;
   text-shadow: 0px 4px 12px rgba(0,0,0,0.7);
+  position: relative; /* agrega esto */
+  top: 2px;           /* baja 2 píxeles */
 }
 
 /* SUBTÍTULO */
