--- a/index.html
+++ b/index.html
@@ -111,10 +111,10 @@ header .subtitulo {
   margin: 0;                /* elimina márgenes */
 }
 
-  .lang-btn {
+.lang-btn {
   position: absolute;
-  top: 20px;
-  right: 20px;
+  top: 10px;    /* menos distancia desde arriba */
+  right: 10px;  /* menos distancia desde la derecha */
   }
 main { max-width: 900px; margin: auto; padding: 40px 20px; }
 
